--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
         <div class="mdui-col-md-9">
             <form method="POST" id="buyForm">
                 <div class="mdui-textfield">
-                    <input placeholder="输入充值的数值 (最小0.01)" type="text" name="number" id="amount"
+                    <input placeholder="输入充值的数值 (最少1元)" type="text" name="number" id="amount"
                            class="mdui-textfield-input"/>
                 </div>
                 <div class="mdui-textfield">
